bpo-42655: Fix subprocess extra_groups gid conversion (GH-23762)